--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.23.0",
     "core-js": "^3.6.5",
     "jquery": "^3.6.0",
+    "moment": "^2.29.1",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-functional-calendar": "^2.9.5",
+    "vue-moment": "^4.1.0",
     "vue-router": "^3.2.0",
     "vue-slick": "^1.1.16",
     "vue-slick-carousel": "^1.0.6",
